k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: k8s-assn
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: thekrao/fe-app:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 10
      # volumes:
      #   - name: ui-config
      #     configMap:
      #       name: frontend-config
      #       items:
      #         - key: config.json
      #           path: config.json
